fixed horizontal scroll

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -63,13 +63,8 @@
 }
 
 @media screen and (max-width:576px) {
-    ::-webkit-scrollbar {
-        display: none;
-    }
-
     body {
-        max-width: 576px;
-        overflow-x: hidden;
+        Overflow-x: hidden;
     }
 
     .navbar-all {
